--- a/ErrorPages/405.html
+++ b/ErrorPages/405.html
@@ -53,7 +53,7 @@ p {
 <h1>405 Method Not Allowed - 405.html</h1>
 您所访问的资源未经允许。
 查看更多请返回网站主页。
-» <a href="http://slimphp.net">slimphp.net</a>
+» <a href="https://slimphp.app">slimphp.net</a>
 
 </pre>
 <p>基于<a href="http://amh.sh">AMH</a> [<a href="http://amh.sh">lnmp</a>] 架构为您提供快速安全高效的用户体验。
