--- a/ErrorPages/502.html
+++ b/ErrorPages/502.html
@@ -53,7 +53,7 @@ p {
 <h1>502 Bad Gateway - 502.html</h1>
 暂时无法响应您的请求，请重试或稍候访问。
 查看更多或返回网站主页。
-» <a href="http://slimphp.net">slimphp.net</a>
+» <a href="https://slimphp.app">slimphp.net</a>
 
 </pre>
 <p>基于<a href="http://amh.sh">AMH</a> [<a href="http://amh.sh">lnmp</a>] 架构为您提供快速安全高效的用户体验。
