--- a/ErrorPages/503.html
+++ b/ErrorPages/503.html
@@ -53,7 +53,7 @@ p {
 <h1>503 Service Unavailable - 503.html</h1>
 服务器维护中。
 暂时无法应答，请稍候访问。
-» <a href="http://slimphp.net">slimphp.net</a>
+» <a href="https://slimphp.app">slimphp.net</a>
 
 </pre>
 <p>基于<a href="http://amh.sh">AMH</a> [<a href="http://amh.sh">lnmp</a>] 架构为您提供快速安全高效的用户体验。
