--- a/ErrorPages/504.html
+++ b/ErrorPages/504.html
@@ -53,7 +53,7 @@ p {
 <h1>504 Gateway Timeout - 504.html</h1>
 您当前请求已超时，请重试。
 查看更多请返回网站主页。
-» <a href="http://slimphp.net">slimphp.net</a>
+» <a href="https://slimphp.app">slimphp.net</a>
 
 </pre>
 <p>基于<a href="http://amh.sh">AMH</a> [<a href="http://amh.sh">lnmp</a>] 架构为您提供快速安全高效的用户体验。
